--- a/css/animate-on-scroll.css
+++ b/css/animate-on-scroll.css
@@ -143,3 +143,152 @@ img {
   }
 
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-size: 1.3rem;
+  font-family: "Oswald", sans-serif;
+  background: lightskyblue;
+
+}
+
+.full-screen-video-container {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+
+  display: flex;
+  justify-content: center;
+
+}
+
+.full-screen-video-container video {
+  z-index: -1;
+  position: absolute;
+  width: auto;
+  height: auto;
+  min-width: 100%;
+  min-height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+a {
+  color: #333;
+  text-decoration: none;
+}
+
+.container {
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+  max-width: 800px;
+
+  margin: auto;
+  overflow: auto;
+  padding: 0 2rem;
+}
+
+.main-header {
+  margin-top: 0px;
+  z-index: 1;
+  position: relative;
+  height: 55vh;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.main-header h1 {
+  font-size: 4rem;
+  margin-bottom: 2rem;
+  line-height: 1.2;
+}
+
+.main-header h1 span {
+  color: #b50d10;
+}
+
+.main-header p {
+  font-size: 2rem;
+}
+
+img {
+  width: 100%;
+}
+
+.card {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+  background: rgb(96, 236, 61);
+  margin-top: 2rem;
+  position: relative;
+}
+
+.card h3 {
+  margin-bottom: 2rem;
+  background: rgba(188, 201, 243, 0.644);
+  display: inline-block;
+  padding: 10px;
+  border-radius: 50px;
+}
+
+.card img {
+  height: 400px;
+  width: 100%;
+}
+
+.card>div {
+  padding: 2rem;
+}
+
+.end {
+  color: red;
+}
+
+.card:nth-child(even) img {
+  order: 2;
+}
+
+.btn {
+  display: inline-block;
+  background: #000;
+  color: #fff;
+  padding: 0.8rem 1.8rem;
+  margin-top: 2rem;
+  cursor: pointer;
+}
+
+.btn:hover {
+  opacity: 0.8;
+}
+
+@media (max-width: 600px) {
+  .full-screen-video-container {
+    width: 100%;
+    height: auto;
+
+  }
+
+  .card {
+    display: block;
+    width: 100%;
+    height: auto;
+    padding: auto;
+  }
+
+  .card img {
+    height: 200px;
+  }
+
+}
