--- a/css/animate-on-scroll.css
+++ b/css/animate-on-scroll.css
@@ -84,7 +84,7 @@ img {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 2rem;
-  background: rgb(96, 236, 61);
+
   margin-top: 2rem;
   position: relative;
 }
@@ -160,7 +160,7 @@ body {
 .full-screen-video-container {
   position: relative;
   height: 100vh;
-  width: 100vw;
+  max-width: 100vw;
 
   display: flex;
   justify-content: center;
@@ -227,12 +227,17 @@ img {
 }
 
 .card {
-  display: grid;
+  display: flex;
+  height: 100vh;
+  max-width: 100vw;
+  justify-content: center;
+  align-items: center;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 2rem;
-  background: rgb(96, 236, 61);
+
   margin-top: 2rem;
   position: relative;
+
 }
 
 .card h3 {
@@ -273,7 +278,7 @@ img {
   opacity: 0.8;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 568px) {
   .full-screen-video-container {
     width: 100%;
     height: auto;
@@ -281,14 +286,21 @@ img {
   }
 
   .card {
-    display: block;
-    width: 100%;
-    height: auto;
-    padding: auto;
+    display: flex;
+    height: 100vh;
+    width: 200%;
+    justify-content: center;
+    align-items: center;
+
+
+    margin-top: 2rem;
+    position: relative;
+
   }
 
   .card img {
-    height: 200px;
+    height: 400px;
+    width: 200%;
   }
 
 }
