--- a/css/animate-on-scroll.css
+++ b/css/animate-on-scroll.css
@@ -82,8 +82,8 @@ img {
 
 .card {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 2rem;
+  /* grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem; */
 
   margin-top: 2rem;
   position: relative;
@@ -232,8 +232,8 @@ img {
   max-width: 100vw;
   justify-content: center;
   align-items: center;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 2rem;
+  /* grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem; */
 
   margin-top: 2rem;
   position: relative;
@@ -299,8 +299,8 @@ img {
   }
 
   .card img {
-    height: 400px;
-    width: 200%;
+    height: auto;
+    width: 100%;
   }
 
 }
