--- a/style.css
+++ b/style.css
@@ -307,7 +307,8 @@ h2 {
 }
 
 .form__input:focus {
-  font-size: 0.8rem;
+  font-size: 0.6rem;
+  right:6px;
   outline: none;
   background-color: rgba(255, 255, 255, 0.6);
 }
@@ -434,9 +435,9 @@ h2 {
     align-self: center;
     font-size: 30px;
 }
-@mediaquery(max-width:580px){
+@media(max-width:580px){
   .form__input:focus {
   font-size: 0.6rem;
-  margin-left:-6px;
+  left:-6px;
   }
 }
